# smart-vcutter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CMakeLists.txt  README.md  TODO  build_window.cmd  setup.iss
cmake-modules/: CodeCoverage.cmake
docs/video/: sample_result.webm
libs/vstream/: CMakeLists.txt
libs/vstream/video_stream/: CMakeLists.txt  encoder.cpp  encoder.h  ffmpeg_guards.cpp  ffmpeg_guards.h  ffmpeg_headers.h  ffmpeg_stream.cpp  ffmpeg_stream.h  player.cpp  player.h  video_stream.cpp
libs/vstream/video_stream/vstream/: video_stream.h
misc/: checks.py  cpplint.py  debdist.py  deps.py
smart-vcutter/: CMakeLists.txt
smart-vcutter/clippings/: clipping_keeper.cpp  clipping_keeper.h  clipping_painter.cpp  clipping_painter.h
smart-vcutter/common/: box.cpp  box.h  calcs.cpp  calcs.h  conversions.cpp  conversions.h  point.cpp  point.h  utils.cpp  utils.h  view_port.cpp  view_port.h
smart-vcutter/data/: history.cpp  history.h  project.cpp  project.h  session.cpp  session.h  xpm.cpp  xpm.h
smart-vcutter/viewer/: buffer_viewer.cpp  buffer_viewer.h  miniature_viewer.cpp  miniature_viewer.h  viewer_texture.cpp  viewer_texture.h
smart-vcutter/viewer/editor/: clipping_editor.cpp  clipping_editor.h  clipping_operations.cpp  clipping_operations.h  drag_operation.cpp  drag_operation.h  magic_operation.cpp  magic_operation.h  resize_operation.cpp  resize_operation.h  rotate_operation.cpp  rotate_operation.h
smart-vcutter/wnd_common/: common_dialogs.cpp  common_dialogs.h  progress_window.cpp  progress_window.h
smart-vcutter/wnd_cutter/: cutter_window.cpp  cutter_window.h  options_window.cpp  options_window.h
smart-vcutter/wnd_main/: main_window.cpp  main_window.h  menu.cpp  menu.h
smart-vcutter/wnd_tools/: encoder_window.cpp  encoder_window.h
smart-vcutter/wrappers/: video_conversion.cpp  video_conversion.h  video_player.cpp  video_player.h
src/: CMakeLists.txt
src/clippings/: clipping.cpp  clipping.h  clipping_conversion.cpp  clipping_conversion.h  clipping_data.cpp  clipping_data.h  clipping_frame.cpp  clipping_frame.h  clipping_iterator.cpp  clipping_iterator.h  clipping_keeper.cpp  clipping_keeper.h  clipping_key.cpp  clipping_key.h  clipping_painter.cpp  clipping_painter.h  clipping_ref.cpp  clipping_ref.h  clipping_render.cpp  clipping_render.h  clipping_session.cpp  clipping_session.h
src/common/: box.cpp  box.h  buffers.cpp  buffers.h  callbacks.h  point.cpp  point.h  utils.cpp  utils.h  view_port.cpp  view_port.h
src/controls/: button.cpp  button.h
src/data/: history.cpp  history.h  json_file.cpp  json_file.h  project.cpp  project.h  session.cpp  session.h  xpm.cpp  xpm.h
src/geometry/: box.cpp  box.h  point.cpp  point.h
src/player/: player.cpp  player.h
src/ui/: action.cpp  action.h  clipping_actions.cpp  clipping_actions.h  vcutter.cpp  vcutter.h
src/ui/controls/: button.cpp  button.h  control.cpp  control.h  menu_bar.cpp  menu_bar.h  menu_item.cpp  menu_item.h
src/ui/dialogs/: file_dialog.cpp  file_dialog.h
src/viewer/: buffer_viewer.cpp  buffer_viewer.h  miniature_viewer.cpp  miniature_viewer.h  viewer_texture.cpp  viewer_texture.h
src/viewer/editor/: clipping_editor.cpp  clipping_editor.h  clipping_operations.cpp  clipping_operations.h  drag_operation.cpp  drag_operation.h  magic_operation.cpp  magic_operation.h  resize_operation.cpp  resize_operation.h  rotate_operation.cpp  rotate_operation.h
src/vstream/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  ffmpeg_guards.cpp  ffmpeg_guards.h  ffmpeg_headers.h  ffmpeg_stream.cpp  ffmpeg_stream.h  player.cpp  player.h  video_stream.cpp  video_stream.h
src/wnd_common/: common_dialogs.cpp  common_dialogs.h  progress_window.cpp  progress_window.h
src/wnd_cutter/: clipping_actions.cpp  clipping_actions.h  cutter_window.cpp  cutter_window.h  options_window.cpp  options_window.h  player_bar.cpp  player_bar.h  side_bar.cpp  side_bar.h
src/wnd_main/: callbacks.h  main_window.cpp  main_window.h  menu.cpp  menu.h  menu_bar.cpp  menu_bar.h
src/wnd_tools/: encoder_window.cpp  encoder_window.h
src/wrappers/: video_conversion.cpp  video_conversion.h  video_player.cpp  video_player.h
tests/: CMakeLists.txt  test_main.cpp  testing.h
tests/data/: test_json_broken.json
tests/test_vcutter/clippings/: test_clipping.cpp  test_clipping_key.cpp  test_conversion.cpp
tests/test_vcutter/common/: test_box.cpp  test_buffers.cpp  test_point.cpp  test_utils.cpp  test_viewport.cpp
tests/test_vcutter/data/: test_history.cpp  test_json_file.cpp  test_xpm.cpp
tests/test_vcutter/mocks/: progress_handler.h
